# OxygenRustEngine

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: polygonstoragebenchmark.rs
src/: lib.rs  main.rs  oe.rs
src/oe/: api_helpers.rs  base_traits.rs  carbon.rs  dummy_structs.rs  emscripten.rs  event.rs  event_container.rs  event_handler.rs  global_variables.rs  math.rs  natrium.rs  task.rs  task_container.rs  task_manager.rs  types.rs  winsys_sdl2.rs
src/oe/carbon/: interpreter.rs  lexer.rs  parser.rs
src/oe/natrium/: datahandler.rs  gpu.rs  renderer_compat.rs
src/oe/natrium/datahandler/: datahandler.rs  render_data.rs  render_datacontainer.rs
src/oe/types/: basecontainer.rs  camera.rs  elementcontainer.rs  global_scenegraph.rs  global_variables.rs  globalscenegraphchanged.rs  globalscenegraphpending.rs  light.rs  material.rs  mesh.rs  object_trait.rs  polygonstorage.rs  polygonstoragetrait.rs  scene.rs  viewport.rs  world.rs
