[package]
name = "oxygenrustengine"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
#sdl3 = "0.5"
sdl2 = "0.37"
gl = "0.10.0"
rayon = "1.10.0"
sorted-vec = "0.8.4"
#lazy_static = "1.4.0"
nohash-hasher = "0.2.0"
bimap = "0.6.3"
parking_lot = "0.12.3"
rand = "0.8.4"
no_deadlocks = "1.3.2"
nalgebra-glm = "0.19"
ordered-map = "0.4.2"
logos = "0.15.0"
compact_str = "0.8.1"

#[cfg(target_os = "emscripten")]
emscripten_main_loop = "0.1"
